# KitaHack2026

./: .firebaserc  .gitignore  ARCHITECTURE.md  BEFORE_AFTER_COMPARISON.md  BUG_FIXES_SUMMARY.md  CHATBOT_IMPLEMENTATION.md  CHATBOT_SUMMARY.md  COMPETITOR_AGENT_ARCHITECTURE.md  COMPETITOR_MONITORING_IMPLEMENTATION_PLAN.md  DIAGNOSTIC_SUMMARY.md  EMAIL_FLOW_VERIFICATION.md  FIREBASE_CHECKLIST.md  FIREBASE_DATA_STRUCTURE.md  FIREBASE_INTEGRATION_SUMMARY.md  FIREBASE_SETUP.md  FIRESTORE_RULES.md  FIRESTORE_USERS_IMPLEMENTATION.md  FLOW_DIAGRAM.md  IMPLEMENTATION_SUMMARY.md  LANGCHAIN_MIGRATION.md  MARKDOWN_FORMATTING_UPDATE.md  NEXT_COMMANDS.md  ORCHESTRATOR_IMPLEMENTATION.md  QUICKSTART.md  QUICKSTART_CHATBOT.md  QUICKSTART_ROI_CHATBOT.md  QUICK_REFERENCE.md  README.md  ROI_ANALYTICS_README.md  ROI_CHATBOT_DOCUMENTATION.md  SUMMARY.md  TESTING_GUIDE.md  TEST_FIRESTORE_USERS.md  USER_PROFILE_DROPDOWN.md  WHAT_WAS_DONE.md  YOUTUBE_REPORT.md  YOUTUBE_REPORT_ARCHITECTURE.md  YOUTUBE_REPORT_IMPLEMENTATION.md  YOUTUBE_REPORT_QUICKSTART.md  YOUTUBE_REPORT_README.md  (+3 more)
backend/: .env.example  .gitignore  AGENT_DEVELOPER_GUIDE.md  DIAGNOSTIC_REPORT.md  QUICK_START.md  README.md  ROI_DATA_ACCESS_FLOW.md  STRUCTURE.md  SUBAGENTS_PATTERN.md  check_messages.py  delete_firestore_data.py  demo_fixes.py  main.py  manage_cron.py  package-lock.json  populate_data.bat  populate_roi_data.py  populate_youtube_data.py  pyproject.toml  requirements.txt  seed_campaigns.py  setup_monitoring_db.py  test_api.py  test_chat.py  test_firebase_read.py  test_image_generation.py  test_integration.py  (+5 more)
(+137 files in other folders)
